<resources>
    <string name="app_name">My Roomz</string>
    <string name="my_room">마이룸</string>
    <string name="tour">투어</string>
    <string name="upload">업로드</string>
    <string name="more">더보기</string>
    <string name="confirm">확인</string>
    <string name="you_received_emoji_reaction_like_this">룸 콘텐츠에 반응을 이만큼 받았어요.</string>
    <string name="emoji_clap">👏</string>
    <string name="emoji_eyes">👀</string>
    <string name="emoji_money">💸</string>
    <string name="emoji_surprised">😮</string>
    <string name="emoji_eye_star">🤩</string>
    <string name="save">저장하기</string>
    <string name="room_deco">룸 데코</string>
    <string name="tab_object">오브젝트</string>
    <string name="tab_interior">인테리어</string>
</resources>